# sensr_ros_driver

./: CMakeLists.txt  README.md  package.xml
argos_msgs/: CMakeLists.txt  package.xml
argos_msgs/msg/: argos_message.msg  bounding_box.msg  non_tracked_object.msg  tracked_object.msg
driver/: CMakeLists.txt  README.md  nodelet_argos.xml  nodelet_sensr.xml  package.xml
driver/include/argos_driver/: driver.h
driver/include/sensr_driver/: driver.h
driver/launch/: nodelet_manager.launch
driver/src/driver/: CMakeLists.txt  driver.cc  nodelet.cc  sensr_node.cc
include/argos_driver/: driver.h
launch/: nodelet_manager.launch
sensr_msgs/: CMakeLists.txt  package.xml
sensr_msgs/msg/: bounding_box.msg  non_tracked_object.msg  sensr_message.msg  tracked_object.msg
src/driver/: CMakeLists.txt  argos_node.cc  driver.cc  nodelet.cc
