<?xml version="1.0"?>
<package format="2">
  <name>argos_driver</name>
  <version>1.0.0</version>
  <description>
    ROS device driver for Argos Sdk.
  </description>
  <maintainer email="stefano@seoulrobotics.org">Stefano Musumeci</maintainer>
  <author>Stefano Musumeci</author>
  <license>MIT</license>

  <url type="website">http://www.seoulrobotics.org</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>argos_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_argos.xml"/>
  </export>
</package>
