<?xml version="1.0"?>
<package format="2">
  <name>sensr_driver</name>
  <version>1.0.0</version>
  <description>
    ROS driver for SENSR SDK.
  </description>
  <maintainer email="stefano@seoulrobotics.org">Stefano Musumeci</maintainer>
  <author>Stefano Musumeci</author>
  <license>MIT</license>

  <url type="website">http://www.seoulrobotics.org</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>sensr_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_sensr.xml"/>
  </export>
</package>
